sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/IRR_ManualCommunicationTemplate__mdt.object-meta.xml
<CustomObject>
    <label>Manual Communication Template</label>
    <pluralLabel>Manual Communication Templates</pluralLabel>
</CustomObject>