sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_DefaultSendEmail__c.field-meta.xml
<CustomField>
    <fullName>IRR_DefaultSendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Send Email should be automatically selected for this template</description>
    <label>Default Send Email</label>
    <type>Checkbox</type>
</CustomField>