sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_DefaultSendSMS__c.field-meta.xml
<CustomField>
    <fullName>IRR_DefaultSendSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Send SMS should be automatically selected for this template</description>
    <label>Default Send SMS</label>
    <type>Checkbox</type>
</CustomField>