sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>IRR_EmailTemplate__c</fullName>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>