sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_Priority__c.field-meta.xml
<CustomField>
    <fullName>IRR_Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>