sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_ResponseTemplate__c.field-meta.xml
<CustomField>
    <fullName>IRR_ResponseTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Template</label>
    <type>Checkbox</type>
</CustomField>