sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_SendMode__c.field-meta.xml
<CustomField>
    <fullName>IRR_SendMode__c</fullName>
    <label>Send Mode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>