sas-core/main/default/objects/IRR_ManualCommunicationTemplate__mdt/fields/IRR_SMSTemplate__c.field-meta.xml
<CustomField>
    <fullName>IRR_SMSTemplate__c</fullName>
    <label>SMS Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>